fix burger wrap

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -552,7 +552,8 @@ input[type="checkbox"]:checked + label::before {
 .header__lang-wrap {
   display: flex;
   justify-content: space-between;
-  width: 65px;
+  width: 70px;
+  flex-direction: row;
 }
 .active-lang {
   font-weight: 700;
@@ -608,6 +609,13 @@ input[type="checkbox"]:checked + label::before {
   .header__start-btn {
     display: none;
   }
+  .phone-block {
+    display: none;
+  }
+  .header__main-wrap {
+    gap: 90px;
+    justify-content: center;
+  }
   .header__burger-wrap {
     width: 55%;
   }
@@ -616,8 +624,18 @@ input[type="checkbox"]:checked + label::before {
   }
 }
 @media (max-width: 600px) {
+  .en-active-lang::after {
+    display: none;
+  }
+  .ru-active-lang::after {
+    display: none;
+  }
   .header__main-wrap {
-    position: relative;
+    gap: 90px;
+    justify-content: start;
+  }
+  .header .logo-title {
+    font-size: 23px;
   }
   .header__burger-wrap {
     position: fixed;
@@ -648,12 +666,7 @@ input[type="checkbox"]:checked + label::before {
     margin: 25px 0 20px;
   }
   .lang-btn {
-    margin-bottom: 10px;
     padding: 0 5px;
-  }
-  .header__lang-wrap {
-    flex-direction: column;
-    width: auto;
   }
   .polish-lang::before {
     display: none;
@@ -738,6 +751,21 @@ input[type="checkbox"]:checked + label::before {
   100% {
     transform: translateX(-1000px);
     opacity: 0;
+  }
+}
+@media (max-width: 420px) {
+  .header__main-wrap {
+    gap: 60px;
+  }
+}
+@media (max-width: 380px) {
+  .header__main-wrap {
+    gap: 40px;
+  }
+}
+@media (max-width: 370px) {
+  .header__main-wrap {
+    gap: 30px;
   }
 }
 .contact-form__wrap.opened-form {
@@ -986,7 +1014,7 @@ input[type="checkbox"]:checked + label::before {
   }
 }
 .greetings {
-  min-height: 540px;
+  min-height: 580px;
   height: 100vh;
   padding-top: 80px;
   background: #fafafa;
@@ -1251,7 +1279,7 @@ input[type="checkbox"]:checked + label::before {
 @media (max-width: 600px) {
   .greetings {
     min-height: 300px;
-    height: 450px;
+    height: 480px;
   }
   .greetings__desc-block {
     height: 100%;
@@ -1602,6 +1630,7 @@ input[type="checkbox"]:checked + label::before {
 }
 .favbet {
   width: 340px;
+  height: 70px;
 }
 .nature {
   transform: scale(1.3);
@@ -1680,7 +1709,7 @@ input[type="checkbox"]:checked + label::before {
 }
 .partners__item {
   flex: 0 0 auto;
-  height: 70px;
+  min-height: 70px;
   max-height: 100px;
   display: flex;
   align-items: center;
@@ -1727,6 +1756,7 @@ input[type="checkbox"]:checked + label::before {
   }
   .favbet {
     width: 300px;
+    height: 55px;
   }
 }
 .services {
