--- a/less/blocks/greetings.less
+++ b/less/blocks/greetings.less
@@ -1,5 +1,5 @@
 .greetings {
-  min-height: 540px;
+  min-height: 580px;
   height: 100vh;
   padding-top: 80px;
   background: #fafafa;
@@ -309,7 +309,7 @@
 @media (max-width: 600px) {
   .greetings {
     min-height: 300px;
-    height: 450px;
+    height: 480px;
   }
   .greetings__desc-block {
     height: 100%;
