--- a/less/blocks/partners.less
+++ b/less/blocks/partners.less
@@ -44,6 +44,7 @@
 }
 .favbet {
   width: 340px;
+  height: 70px;
 }
 .nature {
   transform: scale(1.3);
@@ -122,7 +123,7 @@
 }
 .partners__item {
   flex: 0 0 auto;
-  height: 70px;
+  min-height: 70px;
   max-height: 100px;
   display: flex;
   align-items: center;
@@ -169,5 +170,6 @@
   }
   .favbet {
     width: 300px;
+    height: 55px;
   }
 }
